[package]
name = "matt"
version = "0.1.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2018"

[dependencies]
clokwerk = "0.3"
serde = "1.0"
serde_derive = "1.0"
clap = "2.33"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "rustls-tls"]

[dependencies.config]
version = "0.9"
features = ["toml"]
