[package]
name = "matt"
version = "1.0.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["cargo"] }
clokwerk = "0.3.5"
config = { version = "0.13.2", features = ["toml"] }
reqwest = { version = "0.11.12", features = ["blocking", "rustls-tls"] }
retry = "2.0.0"
serde = "1.0.147"
serde_derive = "1.0.147"
